# pemja

./: README.md  pom.xml  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml  build_wheels_manually.yml  java_tests.yml
dev/: build-wheels.sh  dev-requirements.txt  lint-python.sh
src/main/c/pemja/core/: pylib.c  pyutils.c
src/main/c/pemja/utils/: CommonUtils.c
src/main/java/pemja/utils/: CommonUtils.java
src/main/python/pemja/: version.py
