[build-system]
# Minimum requirements for the build system to execute.
requires = [
    "packaging>=20.5; platform_machine=='arm64'",  # macos M1
    "setuptools>=67.0.0",
    "wheel>=0.37.0",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel.macos]
archs = "x86_64 arm64"

[tool.cibuildwheel.windows]
build = "cp3{8,9,10,11,12,13}*"
archs = "AMD64"
enable = ["cpython-freethreading"]